# OpenGov-LiteracyCoach

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  docker-compose.mock.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-test.txt  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
data/evals/: reading_eval.jsonl  writing_eval.jsonl
data/texts/: texts.json
docker/: Dockerfile  Dockerfile.agent  Dockerfile.assessment  Dockerfile.content  Dockerfile.gateway  Dockerfile.teacher  healthcheck.py  prometheus.yml
docs/: RELEASE_NOTES_v1.2.0.md  api-reference.md  architecture.md  runbooks.md  teacher_api.md
scripts/: release.sh
src/litcoach/: __init__.py  cli.py
src/litcoach/agents/: __init__.py  manager.py  retrieval.py  security.py  tools.py  vector_store.py
src/litcoach/prompts/: tutor.yml
src/litcoach/schemas/: events.json  tools.json
src/litcoach/services/: ollama_client.py
src/litcoach/services/agent/: __init__.py  app.py
src/litcoach/services/assessment/: __init__.py  app.py
src/litcoach/services/content/: __init__.py  app.py  db.py  ingest.py
src/litcoach/services/gateway/: __init__.py  app.py
src/litcoach/services/gateway/static/: index.html  reader.html  teacher.html  writer.html
src/litcoach/services/teacher_api/: __init__.py  app.py  db.py
src/litcoach/tui/: __init__.py  app.py  config.py  menus.py  widgets.py
src/litcoach/utils/: audio.py  openai_client.py
tests/: test_agent.py  test_agents.py  test_assessment.py  test_content.py  test_gateway.py  test_gateway_writer.py  test_performance.py  test_security.py  test_teacher_api.py
